banner positioning for smaller viewports

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,9 @@ body {
 .banner {
   /* col-end 4 - halfway across the page */
   grid-column: full-start / col-end 4; }
+  @media only screen and (max-width: 87.5em) {
+    .banner {
+      grid-column: full-start / full-end; } }
 
 .slideshow {
   height: 100%;
@@ -90,6 +93,9 @@ body {
     position: relative;
     /* define animation property for wrapper as slideshow with the duration of 15 seconds */
     animation: slideshow 15s infinite; }
+    @media only screen and (max-width: 87.5em) {
+      .slideshow__wrapper {
+        width: 400vw; } }
 
 .slide img {
   height: 100%;
@@ -97,6 +103,9 @@ body {
   width: 50vw;
   /* image keeps its aspect ratio (so not stretched) and fills the given dimension. Image = clipped to fit */
   object-fit: cover; }
+  @media only screen and (max-width: 87.5em) {
+    .slide img {
+      width: 100vw; } }
 
 /* keyframes percentages? = percentage of the animation duration */
 @keyframes slideshow {
@@ -128,7 +137,29 @@ body {
   85% {
     left: 0vw; }
   100% {
-    left: 0vw; } }
+    left: 0vw; }
+  @media only screen and (max-width: 87.5em) {
+    @keyframes slideshow {
+      0% {
+        left: 0; }
+      5% {
+        left: 0; }
+      10% {
+        left: -1000vw; }
+      30% {
+        left: -100vw; }
+      35% {
+        left: -200vw; }
+      55% {
+        left: -200vw; }
+      60% {
+        left: -300vw; }
+      80% {
+        left: -300vw; }
+      85% {
+        left: 0vw; }
+      100% {
+        left: 0vw; } } } }
 
 .slide__btn {
   width: 2rem;
