--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   /* col-end 4 - halfway across the page */
   grid-column: full-start / col-end 4;
-  @media only screen and (max-width: $bp-largest) {
+  @media only screen and (max-width: $bp-large) {
     grid-column: full-start / full-end;
   }
 }
@@ -22,8 +22,9 @@
     /* define animation property for wrapper as slideshow with the duration of 15 seconds */
     // we want animation to be played infinitely, hence animation iteration 'infinite'
     animation: slideshow 15s infinite;
-    @media only screen and (max-width: $bp-largest) {
+    @media only screen and (max-width: $bp-large) {
       width: 400vw;
+      animation: slideshowSmallViewport 15s infinite;
     }
   }
 }
@@ -35,7 +36,7 @@
     width: 50vw;
     /* image keeps its aspect ratio (so not stretched) and fills the given dimension. Image = clipped to fit */
     object-fit: cover;
-    @media only screen and (max-width: $bp-largest) {
+    @media only screen and (max-width: $bp-large) {
       width: 100vw;
     }
   }
@@ -84,46 +85,45 @@
   100% {
     left: 0vw;
   }
-  @media only screen and (max-width: $bp-largest) {
-    @keyframes slideshow {
-      0% {
-        left: 0;
-      }
-      5% {
-        left: 0;
-      }
-      10% {
-        left: -1000vw;
-      }
-      30% {
-        left: -100vw;
-      }
-      35% {
-        left: -200vw;
-      }
-      55% {
-        left: -200vw;
-      }
-      60% {
-        left: -300vw;
-      }
-      80% {
-        left: -300vw;
-      }
-      85% {
-        left: 0vw;
-      }
-      100% {
-        left: 0vw;
-      }
-    }
+}
+
+@keyframes slideshowSmallViewport {
+  0% {
+    left: 0;
+  }
+  5% {
+    left: 0;
+  }
+  10% {
+    left: -100vw;
+  }
+  30% {
+    left: -100vw;
+  }
+  35% {
+    left: -200vw;
+  }
+  55% {
+    left: -200vw;
+  }
+  60% {
+    left: -300vw;
+  }
+  80% {
+    left: -300vw;
+  }
+  85% {
+    left: 0vw;
+  }
+  100% {
+    left: 0vw;
   }
 }
 
 .slide {
   &__btn {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     background-color: $color-grey-1;
     border: 0.2rem solid $color-grey-2;
     border-radius: 50%;
@@ -135,35 +135,35 @@
     transform: translateX(-50%);
     /* want to put the buttons on top of the slideshow */
     z-index: 2;
-    @media only screen and (max-width: $bp-largest) {
-      width: 1.5rem;
-      height: 1.5rem;
+    @media only screen and (max-width: $bp-large) {
+      width: 2rem;
+      height: 2rem;
     }
     /* position absolute will put one button on top of another so need to move them individually */
     /* remember the quarter of the way across the page is 25% so want 22, 24, 26 and 28 of the way across 
     the viewport, to center it albeit in a slideshow spanning halfway the viewport 50vw */
     &--1 {
       left: 22%;
-      @media only screen and (max-width: $bp-largest) {
-        left: 47%;
+      @media only screen and (max-width: $bp-large) {
+        left: 38%;
       }
     }
     &--2 {
       left: 24%;
-      @media only screen and (max-width: $bp-largest) {
-        left: 49%;
+      @media only screen and (max-width: $bp-large) {
+        left: 46%;
       }
     }
     &--3 {
       left: 26%;
-      @media only screen and (max-width: $bp-largest) {
-        left: 51%;
+      @media only screen and (max-width: $bp-large) {
+        left: 54%;
       }
     }
     &--4 {
       left: 28%;
-      @media only screen and (max-width: $bp-largest) {
-        left: 53%;
+      @media only screen and (max-width: $bp-large) {
+        left: 62%;
       }
     }
   }
