banner media queries sorted

--- a/css/style.css
+++ b/css/style.css
@@ -219,18 +219,27 @@ body {
   animation: none;
   /* when we focus on second button, we need to display second image */
   left: -50vw; }
+  @media only screen and (max-width: 62.5em) {
+    .slide__btn--2:focus ~ .slideshow__wrapper {
+      left: -100vw; } }
 
 .slide__btn--3:focus ~ .slideshow__wrapper {
   /* in order to stop animation - need to write animation none */
   animation: none;
   /* when we focus on third button, we need to display third image */
   left: -100vw; }
+  @media only screen and (max-width: 62.5em) {
+    .slide__btn--3:focus ~ .slideshow__wrapper {
+      left: -200vw; } }
 
 .slide__btn--4:focus ~ .slideshow__wrapper {
   /* in order to stop animation - need to write animation none */
   animation: none;
   /* when we focus on fourth button, we need to display fourth image */
   left: -150vw; }
+  @media only screen and (max-width: 62.5em) {
+    .slide__btn--4:focus ~ .slideshow__wrapper {
+      left: -300vw; } }
 
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
