picture added of sea serpent

--- a/css/style.css
+++ b/css/style.css
@@ -704,4 +704,5 @@ body {
   margin-bottom: 8rem; }
 
 .table {
-  grid-column: col-start 5 / full-end; }
+  grid-column: col-start 5 / full-end;
+  display: grid; }
