change of files

--- a/css/style.css
+++ b/css/style.css
@@ -703,6 +703,6 @@ body {
 .mb-hg {
   margin-bottom: 8rem; }
 
-.table {
+.sea-serpent {
   grid-column: col-start 5 / full-end;
   display: grid; }
