--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -31,16 +31,26 @@
 }
 
 .slide {
-  & img {
+  &__image {
     height: 100%;
     /* want the width to be half the viewport hence 50vw */
     width: 50vw;
     /* image keeps its aspect ratio (so not stretched) and fills the given dimension. Image = clipped to fit */
     object-fit: cover;
+    position: relative;
     @media only screen and (max-width: $bp-large) {
       /* want images to span whole viewport width smaller devices */
       width: 100vw;
     }
+  }
+  &__image::after {
+    height: 100%;
+    width: 50vw;
+    background: linear-gradient(
+      rgba($color-grey-1, 0.7),
+      rgba($color-grey-1, 0.7)
+    );
+    z-index: 100;
   }
 }
 
